# govcloud-ai-agent-mcp-client

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: Dockerfile  LOGGING_GUIDE.md  alembic.ini  test_endpoint.py  validate_aws_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 2529c53b9c49_initial_migration.py
backend/app/: app.py
backend/app/agent/: graph_nodes.py  mcp_client.py  models.py  repository.py  routes.py  service.py  state.py
backend/app/conversation/: models.py  repository.py  routes.py  service.py
backend/app/core/: config.py  exceptions.py  response.py
backend/app/database/: session.py
backend/app/util/: __init__.py  logging.py  middleware.py
backend/docs/: bruno.json  local.bru
backend/docs/Chat/: Send Message.bru  Send Streaming Message.bru
backend/docs/Conversations/: Create Conversation.bru  Get All Conversations.bru  Get Conversation Messages.bru  Get Conversation.bru
backend/docs/Health/: API Root.bru  Health Check.bru
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ConversationList.jsx  MessageInput.jsx  MessageList.jsx
frontend/src/lib/: api.js  constants.js  (+1 more)
infra/: README.md  main.tf  outputs.tf  requirements.txt  variables.tf
infra/config/: dev.yml  prod.yml
infra/data/: food_inventory.parquet  ship_parts.parquet  shipments.parquet  vessels.parquet
infra/scripts/: generate_sample_data.py  upload_data_and_crawl.py
mcp_server/: __init__.py  athena_service.py  env.example  main.py  models.py  server.py  wikipedia_service.py
(+8 files in other folders)
